--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10"
-  }
+  },
+  "engines": {
+  "node": "16.x"
+}
+
 }
